# localjobscout

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  README.md  SESSION-HANDOFF.md  TO-APPLY.md  Taha_El_Ghadi_Resume.docx  _probe.py  cc_robots.txt  claude-prompts.md  config.yaml  current state and plan.md  currentstate.md  currentstateandplan.md  cursor-summary.md  instructions.txt  pyproject.toml  report.bat  run.bat  run_once.bat  tui.bat  weekly_digest.bat
.claude/: settings.local.json
scripts/: _preflight.py  install_service.py  run_scan_hidden.vbs  scheduled_scan.bat  uninstall_service.py
src/localjobscout/: __main__.py  alerts.py  auto_apply.py  config.py  cover_letter.py  db.py  dedup.py  digest.py  export.py  gap.py  indeed_live.py  liveness.py  llm_backend.py  master_resume.py  matcher.py  matching.py  notifier.py  prefilter.py  prep.py  profile.py  relevance.py  report.py  resume.py  resume_ab.py  scheduler.py  suitability.py  tailor.py  tailor_resume.py  tracker.py  tui.py  url_utils.py
src/localjobscout/scrapers/: adaptive.py  adzuna.py  base.py  cambridge.py  conestoga.py  fetcher.py  grandriver.py  hamiltonhealth.py  icims.py  indeed_pw.py  jobbank.py  laurier.py  linkedin_pw.py  politeness.py  remoteok.py  stmarys.py  talent.py  uoguelph.py  uwaterloo.py
tests/: conftest.py  test_adzuna.py  test_alerts.py  test_auto_apply.py  test_cambridge_adaptive.py  test_conestoga.py  test_conestoga_adaptive.py  test_config.py  test_cover_letter.py  test_cover_letter_validation.py  test_db.py  test_deadlines.py  test_dedup.py  test_digest.py  test_export.py  test_fetcher.py  test_gap.py  test_grandriver_adaptive.py  test_hamiltonhealth_adaptive.py  test_icims_adaptive.py  test_indeed_pw.py  test_install_service.py  test_jobbank_adaptive.py  test_laurier.py  test_laurier_adaptive.py  test_linkedin_pw.py  test_llm_backend.py  test_master_resume.py  test_matcher.py  test_matching.py  test_network_guard.py  test_notifier.py  test_prefilter.py  test_prep.py  test_profile.py  test_remoteok.py  test_report.py  test_resume_ab.py  test_resume_loader.py  test_salary.py  (+13 more)
tests/fixtures/: jobbank_detail.html  jobbank_search_page1.html  jobbank_search_page2.html  jobs_sample.json  linkedin_job_page.html  remoteok_api.json
