[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localjobscout"
version = "0.1.0"
description = "Local job matching against scraped Waterloo, ON postings with OS notifications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4~=4.12",
    "httpx~=0.27",
    "playwright~=1.47",
    "scikit-learn~=1.5",
    "spacy~=3.7",
    "numpy~=1.26",
    "pydantic~=2.8",
    "pydantic-settings~=2.4",
    "pyyaml~=6.0",
    "python-dotenv~=1.0",
    "schedule~=1.2",
    "plyer~=2.1",
    "rich~=13.7",
    "playwright-stealth~=2.0",
    "textual>=0.60",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers~=3.0",
]
pdf = [
    "pypdf>=4.0",
    "fpdf2>=2.7",
]
ai = [
    # Cover letters, suitability scoring, resume profile parsing, resume
    # tailoring, and interview prep. Conditionally imported — all AI features
    # degrade gracefully when this is not installed or no API key is set.
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-pyyaml>=6.0",
]

[project.scripts]
localjobscout = "localjobscout.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/localjobscout"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
# scikit-learn ships no py.typed marker or bundled stubs.
module = ["sklearn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# plyer ships no py.typed marker or bundled stubs.
module = ["plyer.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# dbus is an optional Linux-only package; conditionally imported at runtime.
module = ["dbus"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# schedule ships no py.typed marker or bundled stubs.
module = ["schedule"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# playwright_stealth ships no py.typed marker or bundled stubs.
module = ["playwright_stealth", "playwright_stealth.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# sentence-transformers is an optional extra; conditionally imported.
module = ["sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# anthropic is an optional extra; conditionally imported at runtime.
module = ["anthropic"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pypdf is an optional extra for PDF resume support.
module = ["pypdf"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# fpdf2 is an optional extra for tailored-resume PDF rendering.
module = ["fpdf", "fpdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
